Tooltip position fix on mobile hopefully. Title/Description update

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -124,9 +124,9 @@ p{
 	color: $teal;
 	transition: 0.5s;
 	&:hover{
-		color: $orange;
-		
+		color: $orange;	
 	}
+	z-index: 9999;
 }
 
 
